2013-01-26  Michal Staniaszek  <mxs968@cs.bham.ac.uk>

	* GMP: Removed use of GMP in math library - necessary functionality
	available in GSL.

	* estimator_piecewise.c: Replaced custom probability mass function with
	the function from the GSL.

	* math_util.h: Fixed bug in gaussian transform calculation, split some
	functions to get more control over what goes on.

	* file_util.h: Added functions for outputting gaussians and discrete
	Gaussian transforms to file. Moved includes into header file.

2013-01-25  Michal Staniaszek  <mxs968@cs.bham.ac.uk>

	* generator.c: Changed random number function usage to echo below
	changes.

	* configure.ac: Added checks for GSL library

	* math_util.c: Switched to using GSL to generate random numbers.
	Implemented discrete Gaussian transform with some structs to store
	Gaussians in a clean way. Various functions for initialising vectors
	of gaussians.


2013-01-23  Michal Staniaszek  <mxs968@cs.bham.ac.uk>

	* launcher.c: Updated to reflect changes to functions in combinefunction.c

	* combinefunction.c: Implemented a basic function combinator. Current implementation
	is rough and outputs to a file specified within the code.

2013-01-20  Michal Staniaszek  <mxs968@cs.bham.ac.uk>

	* launcher.c: Estimation of multiple streams at once by the launcher. Updated
	switches to allow for this. Some commenting and more checking for null values.

	* combinefunction.c: Function skeletons for combining functions.

	* makefile.am: Added new file and dependencies generated by it to launcher.

	* scripts: Removed unused plotting scripts. Obsoleted by plotmaster.

	* estimators: All now return an est_arr rather than some returning est_data.
	Easier to integrate with the launcher and other parts of the system.

	* memory: Fixed some leaks caused by swath of changes, and some old ones.

2013-01-19  Michal Staniaszek  <mxs968@cs.bham.ac.uk>

	* headers: Moved headers around in some files in src. Launcher strings
	moved into header file.
